@@ -1,13 +1,19 @@
 package com.jma.productoservice.service.impl;
 
+import com.jma.productoservice.dto.PermisoDto;
 import com.jma.productoservice.dto.RolDto;
+import com.jma.productoservice.entity.PermisoEntity;
 import com.jma.productoservice.entity.RolEntity;
+import com.jma.productoservice.mapping.PermisoMapper;
 import com.jma.productoservice.mapping.RolMapper;
+import com.jma.productoservice.repository.PermisoRepository;
 import com.jma.productoservice.repository.RolRepository;
 import com.jma.productoservice.service.RolService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,10 +22,12 @@ public class RolServiceImpl implements RolService<RolDto> {
 
 
     private final RolRepository rolRepository;
+    private final PermisoRepository permisoRepository;
 
     @Autowired
-    public RolServiceImpl(RolRepository rolRepository){
+    public RolServiceImpl(RolRepository rolRepository, PermisoRepository permisoRepository) {
         this.rolRepository = rolRepository;
+        this.permisoRepository = permisoRepository;
     }
 
 
@@ -42,21 +50,74 @@ public class RolServiceImpl implements RolService<RolDto> {
 
     @Override
     public List<RolDto> obtenerTodos() {
-        return rolRepository.findAll().stream().map(RolMapper::mapToDto).collect(Collectors.toList());
+
+        List<RolEntity> rolEntities = rolRepository.findAll();
+
+        List<RolDto> rolDtos = rolEntities.stream().map(RolMapper::mapToDto).toList();
+
+        for(int i=0;i<rolDtos.size();i++){
+            rolDtos.get(i).setPermisos(rolEntities.get(i).getPermisos().stream().map(PermisoMapper::mapToDto).sorted(Comparator.comparing(PermisoDto::getId)).collect(Collectors.toCollection(LinkedHashSet::new)));
+        }
+
+        return rolDtos;
     }
 
     @Override
     public String eliminar(Object id) {
-        try{
-            rolRepository.deleteById((Long)id);
+        try {
+            rolRepository.deleteById((Long) id);
             return "Fue eliminado con éxito";
-        }catch (Exception ex){
+        } catch (Exception ex) {
             return "No se pudo eliminar, se encontró un error";
         }
     }
 
     @Override
     public RolDto obtenerPorId(Object id) {
-        return rolRepository.findById((Long)id).map(RolMapper::mapToDto).orElse(null);
+        return rolRepository.findById((Long) id).map(RolMapper::mapToDto).orElse(null);
     }
+
+    @Override
+    public PermisoDto definirPermiso(Long idRol, Long idPermiso) {
+
+        return rolRepository.findById(idRol).map(rolInMap -> {
+
+            PermisoDto _permiso = PermisoMapper.mapToDto(permisoRepository.findById(idPermiso)
+                    .orElseThrow(() -> new RuntimeException("No fue encontrado el permiso    = " + idPermiso)));
+            PermisoEntity permisoEntityMapped = PermisoMapper.mapToEntity(_permiso);
+            permisoEntityMapped.setId(_permiso.getId());
+            rolInMap.agregarPermiso(permisoEntityMapped);
+            rolRepository.save(rolInMap);
+            return _permiso;
+
+        }).orElseThrow(() -> new RuntimeException("No fue encontrado el rol = " + idRol));
+    }
+
+
+    @Override
+    public RolDto removerPermiso(Long idRol, Long idPermiso) {
+        RolEntity rol = rolRepository.findById(idRol)
+                .orElseThrow(() -> new RuntimeException("Not found Tutorial with id = " + idRol));
+
+        rol.removerPermiso(idPermiso);
+        RolEntity rolsaved = rolRepository.save(rol);
+
+        return RolMapper.mapToDto(rolsaved);
+    }
+
+    @Override
+    public List<RolDto> buscarRolesPorPermisosId(Long permisoId) {
+
+        List<RolEntity> rolEntities = rolRepository.findRolEntitiesByPermisoId(permisoId);
+
+        List<RolDto> rolDtos = rolEntities.stream().map(RolMapper::mapToDto).toList();
+
+        for(int i=0;i<rolDtos.size();i++){
+            rolDtos.get(i).setPermisos(rolEntities.get(i).getPermisos().stream().map(PermisoMapper::mapToDto).sorted(Comparator.comparing(PermisoDto::getId)).collect(Collectors.toCollection(LinkedHashSet::new)));
+        }
+
+        return rolDtos;
+    }
+
+
 }
